manifests/apps/aws-iam-integration/base/default/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-identity-webhook-custom
  namespace: pod-identity-webhook-custom
  labels:
    app.kubernetes.io/name: pod-identity-webhook-custom
    app.kubernetes.io/component: webhook
    app.kubernetes.io/part-of: openshift-aws-iam-webhook-integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-identity-webhook-custom
  template:
    metadata:
      labels:
        app: pod-identity-webhook-custom
        app.kubernetes.io/name: pod-identity-webhook-custom
        app.kubernetes.io/component: webhook
        app.kubernetes.io/part-of: openshift-aws-iam-webhook-integration
    spec:
      serviceAccountName: pod-identity-webhook-custom
      containers:
        - name: pod-identity-webhook-custom
          image: docker.io/sjenning/pod-identity-webhook:latest
          imagePullPolicy: Always
          command:
            - /webhook
            - --in-cluster
            - --namespace=pod-identity-webhook-custom
            - --service-name=pod-identity-webhook-custom
            - --tls-secret=pod-identity-webhook-custom
            - --port=8443
            - --annotation-prefix=sts.amazonaws.com
            - --token-audience=sts.amazonaws.com
            - --logtostderr
          volumeMounts:
            - name: webhook-certs
              mountPath: /var/run/app/certs
              readOnly: false
      volumes:
        - name: webhook-certs
          emptyDir: {}
