manifests/apps/aws-iam-integration/base/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-identity-webhook-custom
  namespace: pod-identity-webhook-custom
  annotations:
    prometheus.io/port: "8443"
    prometheus.io/scheme: "https"
    prometheus.io/scrape: "true"
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: pod-identity-webhook-custom
