manifests/apps/aws-iam-integration/base/default/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-identity-webhook-custom
  namespace: pod-identity-webhook-custom
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle:  LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNRENDQWhpZ0F3SUJBZ0lJZEhxcEV3RTVpQTh3RFFZSktvWklodmNOQVFFTEJRQXdOakVTTUJBR0ExVUUKQ3hNSmIzQmxibk5vYVdaME1TQXdIZ1lEVlFRREV4ZGhaRzFwYmkxcmRXSmxZMjl1Wm1sbkxYTnBaMjVsY2pBZQpGdzB5TVRBMU1USXlNekk1TURSYUZ3MHpNVEExTVRBeU16STVNRFJhTURZeEVqQVFCZ05WQkFzVENXOXdaVzV6CmFHbG1kREVnTUI0R0ExVUVBeE1YWVdSdGFXNHRhM1ZpWldOdmJtWnBaeTF6YVdkdVpYSXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRENJRDJPODNwOW9Gb0pCQW4wY1JITGE3d0FFK0hUMVYybwpNcFY2clNNV3B [...]
      service:
        name: pod-identity-webhook-custom
        namespace: pod-identity-webhook-custom
        path: /mutate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: pod-identity-webhook.amazonaws.com-custom
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30
